<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simple_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.calvin.elc3.homework1.SimpleCalculator">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:layout_weight="0.45">

            <TextView
                android:layout_width="362dp"
                android:layout_height="48dp"
                android:text="@string/Value_1_Label"
                android:textSize="24sp" />

            <TextView
                android:text="@string/Value_2_Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="24sp"
                android:layout_weight="0.09" />

            <TextView
                android:text="@string/Operator_Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="24sp"
                android:paddingTop="30dp" />

            <Button
                android:text="@string/Calculate_Button"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginRight="200dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.06" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.45"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:textSize="24sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3"
                android:textSize="24sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="0.15" />

            <TextView
                android:text="@string/Final_Val"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textSize="24sp"
                android:layout_weight="0.14" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

